# Saram_in_Scrapper

./: README.md  exporter.py  jobs.csv  main.py  pyproject.toml  scrapper.py
templates/: potato.html  report.html
